--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
     <nav class="navbar navbar-expand-lg d-none d-lg-block navbar-light pt-3 navbar_header w-100">
         <div class="container">
             <div>
-                <a class="navbar-brand" href="#"><img src="images/logo.svg" style="width: 190px;" alt="logo" title="Logo"
+                <a class="navbar-brand" href="#"><img src="images/logo.png" style="width: 190px;" alt="logo" title="Logo"
                         class="img-fluid"></a>
                 <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav"
                     aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
@@ -92,7 +92,7 @@
         <div class="container">
             <div class="d-flex justify-content-between align-items-center py-3 p-2">
                 <a class="navbar-brand" href="#">
-                    <img src="images/logo.svg" alt="logo" style="width: 160px;" class="img-fluid">
+                    <img src="images/logo.png" alt="logo" style="width: 160px;" class="img-fluid">
                 </a>
                 <a class="btn bg_primary rounded shadow-none" data-bs-toggle="offcanvas" href="#mobile-navbar"
                     role="button" aria-controls="mobile-navbar">
@@ -103,7 +103,7 @@
                 aria-labelledby="mobile-navbarLabel">
                 <div class="offcanvas-header bg_lightgrey">
                     <a class="navbar-brand" href="#">
-                        <img src="images/logo.svg" style="width: 160px;" alt="logo" class="img-fluid">
+                        <img src="images/logo.png" style="width: 160px;" alt="logo" class="img-fluid">
                     </a>
                     <button type="button" class="btn border-0 fs-24 p-0 shadow-none fw-600 text-white"
                         data-bs-dismiss="offcanvas" aria-label="Close"><i class="fa-solid fa-xmark fs-24"></i></button>
