--- a/index.html
+++ b/index.html
@@ -139,7 +139,7 @@
     <!-- banner section -->
     <section class="position-relative d-none d-lg-block">
         <div class="container-fluid p-0">
-            <img src="images/banner.webp" alt="banner" class="img-fluid w-100">
+            <img src="images/banner.webp" alt="banner" class="img-fluid img_overlay w-100">
 
         </div>
         <div class="container">
@@ -247,7 +247,7 @@
     </section>
     <section class="position-relative d-lg-none">
         <div class="container-fluid p-0">
-            <img src="images/mobile-banner.webp" alt="banner" class="img-fluid w-100">
+            <img src="images/mobile-banner.webp" alt="banner" class="img-fluid img_overlay w-100">
         </div>
         <div class="container">
             <div class="mobilebannerform">
