--- a/index.html
+++ b/index.html
@@ -624,7 +624,8 @@
                     </div>
                     <div class="imgtext">
                         <p class="text-white mb-1 fs-18 fw-600">Toranto</p>
-                        <p class="fs-14 fw-400 text-white">1570 Listing</p>
+                        
+                        <p class="fs-14 fw-400 mb-2 text-white">1570 Listing</p>
                     </div>
                 </div>
                 <div class="item px-md-1 px-2 imghover"><img src="images/building.png" alt="Building" class="img-fluid">
@@ -677,7 +678,142 @@
                 <div class="col-lg-10 ">
                     <div class="propertiesSale owlDots owl-carousel owl-theme">
                         <div class="item px-2">
-                            <div class="card shadow_sm border-0 br-10 h-100">
+                            <div class="card  border_grey br-10 h-100">
+                                <div class="card-body">
+                                    <div>
+                                        <img src="images/aparment.png" alt="Apartment" title="Apartment"
+                                            class="img-fluid w-100">
+
+                                    </div>
+                                    <div class="img-label">
+                                        <div class="mb-1">
+                                            <img src="images/featured-label.svg" alt="featured" class="img-fluid">
+
+                                        </div>
+                                        <div>
+                                            <img src="images/forsale-label.svg" alt="forsale" class="img-fluid">
+
+                                        </div>
+                                    </div>
+                                    <div class="save_wishlist text-end">
+                                        <span class="fs-14 text-orange"><i
+                                                class="fa-regular fa-bookmark me-1"></i></span>
+                                    </div>
+
+                                    <p class="fs-18 fw-600 mt-2 mb-1 text_darkblack">Gorgeous Apartment Building
+                                    </p>
+                                    <p class="fs-12 fw-400 mb-4 mt-2 text_lightgrey"><i
+                                            class="fa-solid text_grey fa-map me-1"></i> 58 Hullbrook Road,
+                                        Billesley, B13 0LA</p>
+                                    <p class="fs-18 fw-600 text-orange">$7,500</p>
+                                    <p class="text_lightgrey fs-14 fw-400"><span><i
+                                                class="fa-solid fa-bed text_grey me-1"></i>Beds: <b>4</b></span>
+                                        <span><i class="fa-solid fa-bath ms-2 me-1 text_grey"></i>Baths:
+                                            <b>2</b></span> <span><i
+                                                class="fa-solid fa-chart-area ms-2 me-1 text_grey"></i>Sqft:
+                                            <b>1120</b></span>
+                                    </p>
+                                    <hr>
+                                    <div class="mt-4 d-flex justify-content-between">
+                                        <p class="fs-14 text_darkblack fw-500"><i
+                                                class="fa-solid fa-plus text-orange me-1 fs-12"></i>Compare</p>
+                                        <p class="fs-14 text_darkblack fw-500">3 Years Ago</p>
+                                    </div>
+                                </div>
+                            </div>
+                        </div>
+                        <div class="item px-2">
+                            <div class="card  border_grey br-10 h-100">
+                                <div class="card-body">
+                                    <div>
+                                        <img src="images/aparment.png" alt="Apartment" title="Apartment"
+                                            class="img-fluid w-100">
+
+                                    </div>
+                                    <div class="img-label">
+                                        <div class="mb-1">
+                                            <img src="images/featured-label.svg" alt="featured" class="img-fluid">
+
+                                        </div>
+                                        <div>
+                                            <img src="images/forsale-label.svg" alt="forsale" class="img-fluid">
+
+                                        </div>
+                                    </div>
+                                    <div class="save_wishlist text-end">
+                                        <span class="fs-14 text-orange"><i
+                                                class="fa-regular fa-bookmark me-1"></i></span>
+                                    </div>
+
+                                    <p class="fs-18 fw-600 mt-2 mb-1 text_darkblack">Gorgeous Apartment Building
+                                    </p>
+                                    <p class="fs-12 fw-400 mb-4 mt-2 text_lightgrey"><i
+                                            class="fa-solid text_grey fa-map me-1"></i> 58 Hullbrook Road,
+                                        Billesley, B13 0LA</p>
+                                    <p class="fs-18 fw-600 text-orange">$7,500</p>
+                                    <p class="text_lightgrey fs-14 fw-400"><span><i
+                                                class="fa-solid fa-bed text_grey me-1"></i>Beds: <b>4</b></span>
+                                        <span><i class="fa-solid fa-bath ms-2 me-1 text_grey"></i>Baths:
+                                            <b>2</b></span> <span><i
+                                                class="fa-solid fa-chart-area ms-2 me-1 text_grey"></i>Sqft:
+                                            <b>1120</b></span>
+                                    </p>
+                                    <hr>
+                                    <div class="mt-4 d-flex justify-content-between">
+                                        <p class="fs-14 text_darkblack fw-500"><i
+                                                class="fa-solid fa-plus text-orange me-1 fs-12"></i>Compare</p>
+                                        <p class="fs-14 text_darkblack fw-500">3 Years Ago</p>
+                                    </div>
+                                </div>
+                            </div>
+                        </div>
+                        <div class="item px-2">
+                            <div class="card  border_grey br-10 h-100">
+                                <div class="card-body">
+                                    <div>
+                                        <img src="images/aparment.png" alt="Apartment" title="Apartment"
+                                            class="img-fluid w-100">
+
+                                    </div>
+                                    <div class="img-label">
+                                        <div class="mb-1">
+                                            <img src="images/featured-label.svg" alt="featured" class="img-fluid">
+
+                                        </div>
+                                        <div>
+                                            <img src="images/forsale-label.svg" alt="forsale" class="img-fluid">
+
+                                        </div>
+                                    </div>
+                                    <div class="save_wishlist text-end">
+                                        <span class="fs-14 text-orange"><i
+                                                class="fa-regular fa-bookmark me-1"></i></span>
+                                    </div>
+
+                                    <p class="fs-18 fw-600 mt-2 mb-1 text_darkblack">Gorgeous Apartment Building
+                                    </p>
+                                    <p class="fs-12 fw-400 mb-4 mt-2 text_lightgrey"><i
+                                            class="fa-solid text_grey fa-map me-1"></i> 58 Hullbrook Road,
+                                        Billesley, B13 0LA</p>
+                                    <p class="fs-18 fw-600 text-orange">$7,500</p>
+                                    <p class="text_lightgrey fs-14 fw-400"><span><i
+                                                class="fa-solid fa-bed text_grey me-1"></i>Beds: <b>4</b></span>
+                                        <span><i class="fa-solid fa-bath ms-2 me-1 text_grey"></i>Baths:
+                                            <b>2</b></span> <span><i
+                                                class="fa-solid fa-chart-area ms-2 me-1 text_grey"></i>Sqft:
+                                            <b>1120</b></span>
+                                    </p>
+                                    <hr>
+                                    <div class="mt-4 d-flex justify-content-between">
+                                        <p class="fs-14 text_darkblack fw-500"><i
+                                                class="fa-solid fa-plus text-orange me-1 fs-12"></i>Compare</p>
+                                        <p class="fs-14 text_darkblack fw-500">3 Years Ago</p>
+                                    </div>
+                                </div>
+                            </div>
+                        </div>
+                        <div class="item px-2">
+                            <div class="card  border_grey br-10 h-100">
                                 <div class="card-body">
                                     <div>
                                         <img src="images/aparment.png" alt="Apartment" title="Apartment"
@@ -742,6 +878,51 @@
             <div class="row justify-content-center mt-4">
                 <div class="col-md-12">
                     <div class="dreamHome owlDots owl-carousel owl-theme">
+                        <div class="item px-2">
+                            <div class="card shadow_sm border-0 br-10 h-100">
+                                <div class="card-body">
+                                    <div>
+                                        <img src="images/aparment.png" alt="Apartment" title="Apartment"
+                                            class="img-fluid w-100">
+
+                                    </div>
+                                    <div class="img-label">
+                                        <div class="mb-1">
+                                            <img src="images/featured-label.svg" alt="featured" class="img-fluid">
+
+                                        </div>
+                                        <div>
+                                            <img src="images/forsale-label.svg" alt="forsale" class="img-fluid">
+
+                                        </div>
+                                    </div>
+                                    <div class="save_wishlist text-end">
+                                        <span class="fs-14 text-orange"><i
+                                                class="fa-regular fa-bookmark me-1"></i></span>
+                                    </div>
+
+                                    <p class="fs-18 fw-600 mt-2 mb-1 text_darkblack">Gorgeous Apartment Building
+                                    </p>
+                                    <p class="fs-12 fw-400 mb-4 mt-2 text_lightgrey"><i
+                                            class="fa-solid text_grey fa-map me-1"></i> 58 Hullbrook Road,
+                                        Billesley, B13 0LA</p>
+                                    <p class="fs-18 fw-600 text-orange">$7,500</p>
+                                    <p class="text_lightgrey fs-14 fw-400"><span><i
+                                                class="fa-solid fa-bed text_grey me-1"></i>Beds: <b>4</b></span>
+                                        <span><i class="fa-solid fa-bath ms-2 me-1 text_grey"></i>Baths:
+                                            <b>2</b></span> <span><i
+                                                class="fa-solid fa-chart-area ms-2 me-1 text_grey"></i>Sqft:
+                                            <b>1120</b></span>
+                                    </p>
+                                    <hr>
+                                    <div class="mt-4 d-flex justify-content-between">
+                                        <p class="fs-14 text_darkblack fw-500"><i
+                                                class="fa-solid fa-plus text-orange me-1 fs-12"></i>Compare</p>
+                                        <p class="fs-14 text_darkblack fw-500">3 Years Ago</p>
+                                    </div>
+                                </div>
+                            </div>
+                        </div>
                         <div class="item px-2">
                             <div class="card shadow_sm border-0 br-10 h-100">
                                 <div class="card-body">
